Read initial sensor reading from shared memory on initialization

A sensor's initial reading is checked to see if an event should be
fired immediately after it is activated. Unfortunately this initial
reading was not actually read from shared memory. Depending on timing
the reading might be refreshed by the polling timer or upon receiving
a SensorReadingChanged message.

This patch updates the code to take this initial reading on
initialization so that we can reliably decide whether to send an
initial reading event.

Bug: 789515,809537
Change-Id: I96f441aad3ec474ef94fd634aa34bf9b29b9edf9
Reviewed-on: https://chromium-review.googlesource.com/1103178
Reviewed-by: Jun Cai <juncai@chromium.org>
Commit-Queue: Reilly Grant <reillyg@chromium.org>
Cr-Commit-Position: refs/heads/master@{#568169}
Former-commit-id: aa03d3a04070f6a5549ac47e43c189c994b4ea63